--- a/src/styles.css
+++ b/src/styles.css
@@ -41,6 +41,18 @@
   color: #434343;
 }
 
+.button-submit {
+  border: none;
+  text-align: center;
+  display: block;
+  margin: 4px 2px;
+  min-width: 125px;
+  border-radius: 10px;
+  background: #ee6c4d;
+  color: #434343;
+  padding: 7px 20px
+}
+
 .button-add {
   border: none;
   text-align: center;
