--- a/src/styles.css
+++ b/src/styles.css
@@ -66,6 +66,20 @@
   color: #434343;
 }
 
+.button-createreservation {
+  border: none;
+  text-align: center;
+  display: block;
+  margin-top: 2px;
+  margin-bottom: 15px;
+  margin-left: 32%;
+  min-width: 80px;
+  border-radius: 14px;
+  padding: 5px 18px;
+  background: #ee6c4d;
+  color: #434343;
+}
+
 
 .text {
   color: white;
