--- a/src/styles.css
+++ b/src/styles.css
@@ -66,13 +66,27 @@
   color: #434343;
 }
 
+.button-checkin {
+  border: none;
+  text-align: center;
+  display: block;
+  margin-top: 8px;
+  margin-bottom: 10px;
+  margin-left: 40%;
+  min-width: 80px;
+  border-radius: 10px;
+  padding: 3px 25px;
+  background: #ee6c4d;
+  color: #434343;
+}
+
 .button-createreservation {
   border: none;
   text-align: center;
   display: block;
   margin-top: 2px;
   margin-bottom: 15px;
-  margin-left: 32%;
+  margin-left: 0%;
   min-width: 80px;
   border-radius: 14px;
   padding: 5px 18px;
@@ -139,6 +153,6 @@
   color: white;
 }
 
-* h3{
+* h3, h4{
   color: white;
 }
