--- a/src/styles.css
+++ b/src/styles.css
@@ -50,7 +50,7 @@
   border-radius: 10px;
   background: #ee6c4d;
   color: #434343;
-  padding: 7px 20px
+  padding: 7px 20px;
 }
 
 .button-add {
@@ -75,7 +75,7 @@
   border-radius: 10px;
   background: #434343;
   color: white;
-  padding: 7px 20px
+  padding: 7px 20px;
 }
 
 .button-checkin {
@@ -105,7 +105,6 @@
   background: #ee6c4d;
   color: #434343;
 }
-
 
 .text {
   color: white;
@@ -165,11 +164,17 @@
   color: white;
 }
 
-* h3, h4{
+* h3,
+h4 {
   color: white;
 }
 
 .space-mgmt {
   height: 4rem;
+  margin-bottom: 2%;
+}
+
+.san-sched {
+  height: 9rem;
   margin-bottom: 2%;
 }
