added checked in functionality and acct settings

--- a/src/styles.css
+++ b/src/styles.css
@@ -92,6 +92,11 @@
   color: #434343;
 }
 
+.button-checkin:disabled {
+  background-color: #434343;
+  color: white
+}
+
 .button-createreservation {
   border: none;
   text-align: center;
