--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,41 +1,38 @@
-.app {
-  padding: 10px;
+.App {
+  text-align: center;
 }
 
-
-form {
-  width: 50%;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
 }
 
-.form-input {
-  margin: 10px 0px;
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
 
-.form-input input, .form-input textarea {
-  width: 100%;
-  font-size: 1rem;
-  line-height: 1.5;
-  border-radius: .25rem;
-  border: 1px solid lightgray;
-  padding: .375rem .75rem;
-  outline: none;
-  
+.App-header {
+  background-color: #282c34;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: rgb(255, 255, 255);
 }
 
-button {
-  background-color: #007bff;
-  color: #fff;
-  padding: .375rem .75rem;
-  font-size: 1rem;
-  line-height: 1.5;
-  border-radius: .25rem;
-  cursor: pointer;
-  outline: none;
+.App-link {
+  color: #61dafb;
 }
 
-.blog-post__display {
-  border: 1px solid lightgrey;
-  margin: 5px 0px;
-  border-radius: 4px;
-  padding: 10px;
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
