--- a/src/styles.css
+++ b/src/styles.css
@@ -84,12 +84,40 @@
   display: block;
   margin-top: 8px;
   margin-bottom: 10px;
-  margin-left: 40%;
+  margin-left: 27%;
   min-width: 80px;
   border-radius: 10px;
   padding: 3px 25px;
   background: #ee6c4d;
   color: #434343;
+}
+
+.button-cancel {
+  border: none;
+  text-align: center;
+  display: block;
+  margin-top: 8px;
+  margin-bottom: 10px;
+  margin-left: 5%;
+  min-width: 80px;
+  border-radius: 10px;
+  padding: 3px 25px;
+  background: #434343;
+  color: white;
+}
+
+.button-cancel-alone {
+  border: none;
+  text-align: center;
+  display: block;
+  margin-top: 8px;
+  margin-bottom: 10px;
+  margin-left: 40%;
+  min-width: 80px;
+  border-radius: 10px;
+  padding: 3px 25px;
+  background: #434343;
+  color: white;
 }
 
 .button-checkin:disabled {
